# native-app-extractor-public

./: .gitignore  .sqlfluff  .sqlfluffignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  snowflake.yml
.github/workflows/: python-app.yml
app/: README.md  setup_core_objects.sql  setup_execution_objects.sql
deploy/: 00_set_vars_for_cli.sql  01_set_vars_for_vscode.sql  10_PROVIDER_setup_role_and_warehouse.sh  10_PROVIDER_setup_role_and_warehouse.sql  20_PROVIDER_create_image_repository.sh  20_PROVIDER_create_image_repository.sql  30_PROVIDER_create_docker_image.sh  40_LOCAL_create_app_services.sh  40_LOCAL_prep_session_and_create_schemas.sql  40_LOCAL_set_vars.sql  42_LOCAL_smoke_test_app_services.sh  42_LOCAL_smoke_test_create_integration.sql  42_LOCAL_smoke_test_run.sql  70_PROVIDER_drop_objects.sh  70_PROVIDER_drop_objects.sql  830_LOCAL_deploy_test.sh
service/: singerio_tap_service.py
test/: singerio_tap_service_test.py
test/docker/: start_docker_local.sh  stop_docker_local.sh
